media 980, 768 done.  viewport not added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,3 +159,48 @@ footer{
     padding-top: 55px;
     z-index: 2;
 }
+
+@media screen and (max-width: 980px){
+    header{
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+    .mainContent{
+        width: 60%;
+        margin-left: 40px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    header{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .mainContent{
+        width: 95%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 640px){
+    header{
+        position: static;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    
+    .name{
+        width: 100%
+    }
+
+    .tab{
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .navtabs{
+        margin: 0 auto;
+    }
+}
